# financial-reporter

./: .env  Cargo.toml  LICENSE  README.md
migrations/: 20220727185431_AddUsers.up.sql  20220727190348_AddAccounts.down.sql  20220727190348_AddAccounts.up.sql  20220727191111_AddTags.down.sql  20220727191111_AddTags.up.sql  20220727191920_AddTransactions.down.sql  20220727191920_AddTransactions.up.sql
migrations/2022-07-13-181604_add_base_objects/: up.sql
src/: lib.rs  models.rs  schema.rs
