[package]
name = "financial-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
rocket = "0.4.11"
rocket_codegen = "0.4.11"
serde = "1.0.139"
serde_derive = "1.0.139"
serde_json = "1.0.82"

[dev-dependencies]
sqlx-cli = "0.6.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
